# xpmem

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac  dkms.conf  dkms.conf.in  xpmem-dkms.spec  xpmem-dkms.spec.in  xpmem-kmod.spec  xpmem-kmod.spec.in  xpmem-lib.spec  xpmem.spec  xpmem.spec.in
ci/: azure-pipelines.yml  coverity.yml  lib.sh
ci/dockers/: centos.Dockerfile  docker-compose.yml  push-docker-images.sh  ubuntu.Dockerfile
ci/vm/: Vagrantfile  entrypoint.sh  provision1.sh  provision2.sh
debian/: changelog  changelog.in  control  copyright
kernel/: Makefile.am  xpmem_attach.c  xpmem_main.c  xpmem_misc.c  xpmem_mmu_notifier.c  xpmem_pfn.c  xpmem_private.h
lib/: libxpmem.c
m4/: ac_kernel_checks.m4  ac_path_kernel_source.m4
test/: Makefile.am
test/gtest/: Makefile.am  test_basic.cc  test_main.cc  test_multi.cc
test/gtest/common/: sync.h  xpmem_test.cc  xpmem_test.h
test/gtest/common/googletest/: Makefile.am
test/share/: Makefile.am  xpmem_master.c  xpmem_proc2.c
test/share/include/: xpmem_test.h
